Adds 'Deprecated Function' Label to Pipelines Section (#24018)
* Created deprecated function constant and deprecated function info component and added component to the 'Manage Rules' page and the pipeline details page.

* Fixed FE test and adjusted deprecated function badge placement and sizing.

* Fix typescript errors

* Use rule deprecation info properly

* Remove empty columns

* deprecated functions for rule

* Show deprecated function label on rules list

* Add changelog

---------

Co-authored-by: Laura Bergenthal-Grotlüschen <laura.bergenthalgrotlueschen@graylog.com>
Co-authored-by: Patrick Mann <patrickmann@users.noreply.github.com>
Co-authored-by: patrickmann <patrick.mann@graylog.com>
Co-authored-by: Ousmane SAMBA <ousmane@graylog.com>